<resources>
    <string name="app_name">BetMe</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="title_activity_logged_in">LoggedIn</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="login_error">Incorrect user details</string>
    <string name="player" />
    <string name="balance" />
    <string name="title_activity_register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_username">Enter your username</string>
    <string name="register_password">Enter your password</string>
    <string name="register_email">Enter your email</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="EmptyConfPass">Confirm your password!</string>
    <string name="EmptyUsernameReg">Enter in your username!</string>
    <string name="EmptyPassReg">Enter in your password!</string>
    <string name="EmptyEmailReg">Enter in your email!</string>
    <string name="emailExists">Email already exists!</string>
    <string name="usernameExists">Username already exists!</string>
    <string name="title_activity_add_credits">AddCredits</string>
    <string name="i_bet_you_that">I bet you that....</string>
    <string name="singleitemHours">Hrs</string>
    <string name="singleItemListIn">In</string>
    <string name="SingleItemListHours">24</string>
    <string name="singleItemPlace">TextView</string>
    <string name="for2">For</string>
    <string name="in2">In</string>
    <string name="singleItemAmount">100</string>
    <string name="posted_by">Posted By:</string>
    <string name="join_status">Slot:</string>
    <string name="joinBetButton">Join</string>
    <string name="not_enough_credits">Not Enough Credits</string>
    <string name="singleItemCondition">Condition</string>
    <string name="singleItemCreator">user</string>
    <string name="singleItemStatus">status</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="add_credits">Add Credits</string>
    <string name="PlaceList">TextView</string>
    <string name="i_bet_you_that2">I bet you that...</string>
    <string name="amountList2">100</string>
    <string name="ConditionList2">TextView</string>
    <string name="in1222">In</string>
    <string name="for44">For:</string>
    <string name="in456">in</string>
    <string name="i_bet_you_that3">I Bet You That...</string>
    <string name="okay_but_when">Okay... But When?</string>
    <string name="in666">In</string>
    <string name="hoursdialog2">hours</string>
    <string name="place_bet">Place Bet</string>
    <string name="what_amount">What amount..</string>
    <string name="for55">For</string>
    <string name="money22">$$$$</string>
    <string name="not_enough_credits2">Not enough credits!</string>
    <string name="by">By:</string>
    <string name="slot">Slot:</string>
    <string name="not_enough_credits3">Not Enough Credits</string>
    <string name="paypal">PayPal</string>
    <string name="debit">Debit</string>
    <string name="please_select_your_payment_method">Please Select Your Payment Method!</string>
</resources>
