<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbarbackground">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/i_bet_you_that"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/singleitemCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/singleitemPlace"
        android:layout_below="@+id/textView7"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:text="@string/singleItemCondition"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/simpletext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singleitemCondition"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/in2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/singleitemPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/simpletext"
        android:layout_alignBottom="@+id/simpletext"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/simpletext"
        android:text="@string/singleItemPlace"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/singleitemPlace"
        android:layout_alignBottom="@+id/singleitemPlace"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/singleitemPlace"
        android:text="@string/singleItemListIn"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/singleitemHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/textView13"
        android:text="@string/SingleItemListHours"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/singleitemHours"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/singleitemHours"
        android:text="@string/singleitemHours"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singleitemPlace"
        android:layout_marginTop="22dp"
        android:layout_toStartOf="@+id/textView13"
        android:text="@string/for2"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/singleitemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignStart="@+id/textView13"
        android:drawableEnd="@drawable/ic_action_money"
        android:text="@string/singleItemAmount"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/singleitemCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:text="@string/singleItemCreator"
        android:textColor="@color/colorYellow"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/singleitemJoined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singleitemAmount"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/textView10"
        android:text="@string/singleItemStatus"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <Button
        android:id="@+id/singleitemJoinButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/simpleItemEnough"
        android:layout_marginTop="6dp"
        android:background="@drawable/registerbackground"
        android:text="@string/joinBetButton"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/singleitemJoined"
        android:layout_alignBottom="@+id/singleitemJoined"
        android:layout_toStartOf="@+id/singleitemPlace"
        android:text="@string/by"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/singleitemJoined"
        android:layout_alignBottom="@+id/singleitemJoined"
        android:layout_centerHorizontal="true"
        android:text="@string/slot"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/simpleItemEnough"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singleitemCreator"
        android:layout_marginTop="20dp"
        android:text="@string/not_enough_credits3"
        android:textColor="@color/colorError"
        android:visibility="gone"/>

</RelativeLayout>