<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/placeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView19"
        android:text="@string/PlaceList"
        android:textColor="@color/colorBlue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/betyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/i_bet_you_that2"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/amountList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView26"
        android:layout_alignBottom="@+id/textView26"
        android:layout_marginStart="6dp"
        android:layout_toEndOf="@+id/textView26"
        android:drawableEnd="@drawable/ic_action_money2"
        android:text="@string/amountList2"
        android:textColor="@color/colorBlue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/conditionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/betyou"
        android:layout_alignBottom="@+id/betyou"
        android:layout_marginStart="9dp"
        android:layout_toEndOf="@+id/betyou"
        android:text="@string/ConditionList2"
        android:textColor="@color/colorBlue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/betyou"
        android:layout_below="@+id/betyou"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:text="@string/in1222"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/placeList"
        android:layout_alignBottom="@+id/placeList"
        android:layout_alignStart="@+id/conditionList"
        android:layout_marginStart="81dp"
        android:text="@string/for44"
        android:textSize="25sp" />

</RelativeLayout>