<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidtheme"
    tools:context="app.betme.betme.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/betmelogo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="47dp"
        android:hint="@string/username"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_action_username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/username"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:background="#11000000"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_action_password"/>

    <Button
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/itembackground"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/Incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/login_error"
        android:textColor="@color/colorError" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        tools:text="Sign Up" />


</RelativeLayout>
