<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbarbackground">


    <Button
        android:id="@+id/placebetButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="114dp"
        android:background="@drawable/registerbackground"
        android:text="@string/place_bet" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/what_amount"
        android:textSize="30sp" />

    <NumberPicker
        android:id="@+id/amountBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"
        android:layout_toStartOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/amountBet"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="68dp"
        android:layout_toStartOf="@+id/amountBet"
        android:text="@string/for55"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:text="@string/money22"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/creditsError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/placebetButton"
        android:layout_below="@+id/amountBet"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/not_enough_credits2"
        android:visibility="gone"
        android:textColor="@color/colorError" />

</RelativeLayout>